--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 *{
     margin: 0;
     padding: 0;
@@ -8,6 +10,14 @@ body{
     /* background: #5a4ab9; */
     background-color: #1b1a46;
     overflow: hidden;
+}
+
+.page-title {
+    margin-top: 100px;
+    text-align: center;
+    color: #fff;
+    font-family: 'Roboto';
+    font-size: 100px;
 }
 
 .container{
